<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_id">290219957796121</string>
    <string name="app_name">Photo_Album</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="imageContentDescription">Image</string>
    <string name="are_you_sure">Are you sure!</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="create">Create</string>
    <string name="photo_picker_place">Choose a photo for this place</string>

    <!-- Error messages -->
    <string name="exc_error">Error</string>
    <string name="cant_load_photo">Can\'t load photo!</string>
    <string name="exc_ok">OK</string>
    <string name="fail_update_item">Couldn\'t update this Item!</string>
    <string name="no_internet_conection">Album needs you to turn ON your internet conection to get started :) </string>

    <!-- Success messages -->
    <string name="success_update_item">You have successfully updated this Item!</string>

    <!-- Gallery Screen -->
    <string name="gallery">Gallery</string>
    <string name="title_activity_map">MapActivity</string>
    <string name="sort_by">Sort By</string>
    <string name="view_as">View as</string>
    <string name="grid">Table</string>
    <string name="list">List</string>
    <string name="edit">EDIT</string>
    <string name="delete">Delete</string>
    <string name="share">Share</string>

    <!-- Map -->
    <string name="map">Map</string>
    <string name="title_activity_edit_details">EditDetailsActivity</string>

    <!-- Edit Screen -->
    <string name="set">Set</string>
    <string name="cancel">Cancel</string>
    <string name="set_date">Set date</string>
    <string name="info">Information</string>
    <string name="edit_details">Edit Details</string>
    <string name="create_item">Create Item</string>
    <string name="save">Save</string>
    <string name="title">Title</string>
    <string name="description">Desctioption</string>
    <string name="created_at">Created At</string>
    <string name="address">Address</string>
    <string name="title_activity_item_details">ItemDetails</string>
    <string name="title_activity_add_item">AddItemActivity</string>

    <!-- Location -->
    <string name="location_disabled">Location services disabled</string>
    <string name="location_access">F1RST needs access to your location. Please turn on location access.</string>
    <string name="settings">Settings</string>
    <string name="title_activity_fb">FBActivity</string>

</resources>