<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".ItemDetails" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="15dp"
        android:background="@drawable/naviation_bar_bg" >

        <TextView
            android:id="@+id/navigationCaption"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="15dp"
            android:background="@drawable/naviation_bar_bg"
            android:clickable="true"
            android:padding="10dp"
            android:text="@string/info"
            android:textColor="#fff"
            android:textSize="22sp"
            android:textStyle="bold" />
    </RelativeLayout>

    <ImageView
        android:id="@+id/photo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginBottom="20dp"
        android:layout_marginRight="10dp"
        android:scaleType="centerCrop" />

    <TextView
        android:id="@+id/txt_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/title"
        android:textSize="14sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/title"
        android:padding="10dp" />

    <TextView
        android:id="@+id/txt_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/address"
        android:textSize="14sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/title"
        android:padding="10dp" />

    <TextView
        android:id="@+id/txt_created_at"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/created_at"
        android:textSize="14sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/created_at"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/created_at"
        android:padding="10dp" />

    <TextView
        android:id="@+id/txt_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/description"
        android:textSize="14sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/description"
        android:padding="10dp" />

</LinearLayout>