<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:minHeight="450dp"
    android:minWidth="1000dp"
    tools:context=".ItemDetails" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#fff"
        android:orientation="vertical"
        android:gravity="center_horizontal" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="#fff" >

            <TextView
                android:id="@+id/navigationCaption"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="15dp"
                android:background="#fff"
                android:clickable="true"
                android:padding="10dp"
                android:text="@string/info"
                android:textColor="#000"
                android:textSize="22sp"
                android:textStyle="bold" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginBottom="15dp"
            android:background="#66A5D8" />

        <ImageView
            android:id="@+id/photo"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginBottom="20dp"
            android:layout_marginRight="10dp"
            android:scaleType="centerCrop" />

        <TextView
            android:id="@+id/txt_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/title"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/title"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
           
            android:padding="10dp" />

        <TextView
            android:id="@+id/txt_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/address"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
           
            android:padding="10dp" />

        <TextView
            android:id="@+id/txt_created_at"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/created_at"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/created_at"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
           
            android:padding="10dp" />

        <TextView
            android:id="@+id/txt_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/description"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
           
            android:padding="10dp" />
    </LinearLayout>

</ScrollView>